turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:22: error: Unmatched closing brace '}' ignored here
}
^